Added Actor base for Player and AI

--- a/Prototype1/Normalized/Normalized.csproj
+++ b/Prototype1/Normalized/Normalized.csproj
@@ -39,6 +39,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Actor.generated.cs">
+      <DependentUpon>CodeGenerator.tt</DependentUpon>
+    </Compile>
     <Compile Include="Ai.generated.cs">
       <DependentUpon>CodeGenerator.tt</DependentUpon>
     </Compile>
