Adding comments to the object model
Added summary and description to most elements in the configuration xml
files, and autogenerate the comments into the .cs files.

--- a/Prototype1/ModuleParser/ModuleParser.csproj
+++ b/Prototype1/ModuleParser/ModuleParser.csproj
@@ -60,6 +60,7 @@
     <Compile Include="ProcessParser.cs" />
     <Compile Include="RequiredParser.cs" />
     <Compile Include="SimpleTypeParser.cs" />
+    <Compile Include="SummaryParser.cs" />
     <Compile Include="UsingParser.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
