--- a/Prototype1/Server.Login/Server.Login.csproj
+++ b/Prototype1/Server.Login/Server.Login.csproj
@@ -5,11 +5,11 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>8.0.50727</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{15B3E0D2-6217-493A-A690-158C497F5318}</ProjectGuid>
+    <ProjectGuid>{0CE8076F-373A-4918-BC44-6F2E5E8E9BAF}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Server</RootNamespace>
-    <AssemblyName>Server</AssemblyName>
+    <RootNamespace>Server.Login</RootNamespace>
+    <AssemblyName>Server.Login</AssemblyName>
     <ProjectTypeGuids>{3D9AD99F-2412-4246-B90B-4EAA41C64699};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <StartArguments>/client:"WcfTestClient.exe"</StartArguments>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
@@ -40,57 +40,43 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.ServiceModel" />
-    <Reference Include="System.ServiceModel.Web" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="EdgeType.generated.cs">
-      <DependentUpon>ServerCodeGenerator.tt</DependentUpon>
-    </Compile>
-    <Compile Include="LoginUserMessage.generated.cs">
-      <DependentUpon>ServerCodeGenerator.tt</DependentUpon>
-    </Compile>
-    <Compile Include="MoveMessage.generated.cs">
-      <DependentUpon>ServerCodeGenerator.tt</DependentUpon>
-    </Compile>
-    <Compile Include="ServiceCodeGenerator.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>ServiceCodeGenerator.tt</DependentUpon>
+      <DependentUpon>Server.Login.CodeGenerator.tt</DependentUpon>
     </Compile>
     <Compile Include="IService.generated.cs">
-      <DependentUpon>ServiceCodeGenerator.tt</DependentUpon>
+      <DependentUpon>Server.Login.ServiceCodeGenerator.tt</DependentUpon>
     </Compile>
-    <Compile Include="ServerCodeGenerator.cs">
+    <Compile Include="LoginUserMessage.generated.cs">
+      <DependentUpon>Server.Login.CodeGenerator.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Server.Login.CodeGenerator.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>ServerCodeGenerator.tt</DependentUpon>
+      <DependentUpon>Server.Login.CodeGenerator.tt</DependentUpon>
     </Compile>
-    <Compile Include="IService.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Service.cs" />
     <Compile Include="Service.generated.cs">
-      <DependentUpon>ServiceCodeGenerator.tt</DependentUpon>
+      <DependentUpon>Server.Login.ServiceCodeGenerator.tt</DependentUpon>
     </Compile>
-    <Compile Include="TurnMessage.generated.cs">
-      <DependentUpon>ServerCodeGenerator.tt</DependentUpon>
-    </Compile>
-    <Compile Include="UpdatePositionMessage.generated.cs">
-      <DependentUpon>ServerCodeGenerator.tt</DependentUpon>
+    <Compile Include="Server.Login.ServiceCodeGenerator.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Server.Login.ServiceCodeGenerator.tt</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config">
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="ServiceCodeGenerator.tt">
+    <None Include="App.config" />
+    <None Include="Server.Login.CodeGenerator.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
-      <LastGenOutput>ServiceCodeGenerator.cs</LastGenOutput>
+      <LastGenOutput>Server.Login.CodeGenerator.cs</LastGenOutput>
     </None>
-    <None Include="ServerCodeGenerator.tt">
+    <None Include="Server.Login.ServiceCodeGenerator.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
-      <LastGenOutput>ServerCodeGenerator.cs</LastGenOutput>
+      <LastGenOutput>Server.Login.ServiceCodeGenerator.cs</LastGenOutput>
     </None>
   </ItemGroup>
   <ItemGroup>
