--- a/Prototype1/Server.Proxy/Server.Proxy.csproj
+++ b/Prototype1/Server.Proxy/Server.Proxy.csproj
@@ -5,11 +5,11 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>8.0.50727</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{15B3E0D2-6217-493A-A690-158C497F5318}</ProjectGuid>
+    <ProjectGuid>{E388ABF0-1E00-41F9-A9C6-202BB4918091}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Server</RootNamespace>
-    <AssemblyName>Server</AssemblyName>
+    <RootNamespace>Server.Proxy</RootNamespace>
+    <AssemblyName>Server.Proxy</AssemblyName>
     <ProjectTypeGuids>{3D9AD99F-2412-4246-B90B-4EAA41C64699};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <StartArguments>/client:"WcfTestClient.exe"</StartArguments>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
@@ -40,61 +40,16 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.ServiceModel" />
-    <Reference Include="System.ServiceModel.Web" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="EdgeType.generated.cs">
-      <DependentUpon>ServerCodeGenerator.tt</DependentUpon>
-    </Compile>
-    <Compile Include="LoginUserMessage.generated.cs">
-      <DependentUpon>ServerCodeGenerator.tt</DependentUpon>
-    </Compile>
-    <Compile Include="MoveMessage.generated.cs">
-      <DependentUpon>ServerCodeGenerator.tt</DependentUpon>
-    </Compile>
-    <Compile Include="ServiceCodeGenerator.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>ServiceCodeGenerator.tt</DependentUpon>
-    </Compile>
-    <Compile Include="IService.generated.cs">
-      <DependentUpon>ServiceCodeGenerator.tt</DependentUpon>
-    </Compile>
-    <Compile Include="ServerCodeGenerator.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>ServerCodeGenerator.tt</DependentUpon>
-    </Compile>
-    <Compile Include="IService.cs" />
+    <Compile Include="IService1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Service.cs" />
-    <Compile Include="Service.generated.cs">
-      <DependentUpon>ServiceCodeGenerator.tt</DependentUpon>
-    </Compile>
-    <Compile Include="TurnMessage.generated.cs">
-      <DependentUpon>ServerCodeGenerator.tt</DependentUpon>
-    </Compile>
-    <Compile Include="UpdatePositionMessage.generated.cs">
-      <DependentUpon>ServerCodeGenerator.tt</DependentUpon>
-    </Compile>
+    <Compile Include="Service1.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config">
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="ServiceCodeGenerator.tt">
-      <Generator>TextTemplatingFileGenerator</Generator>
-      <LastGenOutput>ServiceCodeGenerator.cs</LastGenOutput>
-    </None>
-    <None Include="ServerCodeGenerator.tt">
-      <Generator>TextTemplatingFileGenerator</Generator>
-      <LastGenOutput>ServerCodeGenerator.cs</LastGenOutput>
-    </None>
-  </ItemGroup>
-  <ItemGroup>
-    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
+    <None Include="App.config" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\WCF\Microsoft.VisualStudio.ServiceModel.targets" />
