Added LoginUser message to LoginServer

--- a/Prototype1/ModuleParser/ModuleParser.csproj
+++ b/Prototype1/ModuleParser/ModuleParser.csproj
@@ -40,6 +40,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ArrayParser.cs" />
+    <Compile Include="ReturnsParser.cs" />
     <Compile Include="DataParser.cs" />
     <Compile Include="DataRefParser.cs" />
     <Compile Include="EnumParser.cs" />
