--- a/Prototype1/Configuration/Configuration.csproj
+++ b/Prototype1/Configuration/Configuration.csproj
@@ -42,6 +42,10 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Core.Enumerations.xml">
+      <SubType>Designer</SubType>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="Core.Authentification.xml" />
     <Content Include="Core.Entities.xml">
       <SubType>Designer</SubType>
