--- a/Prototype1/Server.Login/Server.Login.csproj
+++ b/Prototype1/Server.Login/Server.Login.csproj
@@ -44,20 +44,28 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="EdgeType.generated.cs">
-      <DependentUpon>Server.Login.CodeGenerator.tt</DependentUpon>
+    <Compile Include="Character.generated.cs">
+      <DependentUpon>Server.Login.Code.tt</DependentUpon>
     </Compile>
     <Compile Include="IService.generated.cs">
       <DependentUpon>Server.Login.ServiceCodeGenerator.tt</DependentUpon>
     </Compile>
+    <Compile Include="LoginToken.generated.cs">
+      <DependentUpon>Server.Login.Code.tt</DependentUpon>
+    </Compile>
     <Compile Include="LoginUserMessage.generated.cs">
-      <DependentUpon>Server.Login.CodeGenerator.tt</DependentUpon>
+      <DependentUpon>Server.Login.ContractCodeGenerator.tt</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Server.Login.CodeGenerator.cs">
+    <Compile Include="Server.Login.Code.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>Server.Login.CodeGenerator.tt</DependentUpon>
+      <DependentUpon>Server.Login.Code.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Server.Login.ContractCodeGenerator.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Server.Login.ContractCodeGenerator.tt</DependentUpon>
     </Compile>
     <Compile Include="Service.generated.cs">
       <DependentUpon>Server.Login.ServiceCodeGenerator.tt</DependentUpon>
@@ -67,12 +75,22 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Server.Login.ServiceCodeGenerator.tt</DependentUpon>
     </Compile>
+    <Compile Include="User.generated.cs">
+      <DependentUpon>Server.Login.Code.tt</DependentUpon>
+    </Compile>
+    <Compile Include="UserList.generated.cs">
+      <DependentUpon>Server.Login.Code.tt</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-    <None Include="Server.Login.CodeGenerator.tt">
+    <None Include="Server.Login.Code.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
-      <LastGenOutput>Server.Login.CodeGenerator.cs</LastGenOutput>
+      <LastGenOutput>Server.Login.Code.cs</LastGenOutput>
+    </None>
+    <None Include="Server.Login.ContractCodeGenerator.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <LastGenOutput>Server.Login.ContractCodeGenerator.cs</LastGenOutput>
     </None>
     <None Include="Server.Login.ServiceCodeGenerator.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
