Updating the Server.Login

--- a/Prototype1/Server.Login/App.config
+++ b/Prototype1/Server.Login/App.config
@@ -11,15 +11,15 @@
   app.config file. System.Configuration does not support config files for libraries. -->
   <system.serviceModel>
     <services>
-      <service name="Server.Login.Service1">
+      <service name="Server.Login.LoginClientService">
         <host>
           <baseAddresses>
-            <add baseAddress = "http://localhost:8733/Design_Time_Addresses/Server.Login/Service1/" />
+            <add baseAddress = "http://localhost:8733/Design_Time_Addresses/Server.Login/ClientService/" />
           </baseAddresses>
         </host>
         <!-- Service Endpoints -->
         <!-- Unless fully qualified, address is relative to base address supplied above -->
-        <endpoint address="" binding="basicHttpBinding" contract="Server.Login.IService1">
+        <endpoint address="" binding="basicHttpBinding" contract="Server.Login.ILoginClientService">
           <!-- 
               Upon deployment, the following identity element should be removed or replaced to reflect the 
               identity under which the deployed service runs.  If removed, WCF will infer an appropriate identity 
@@ -31,6 +31,29 @@
         </endpoint>
         <!-- Metadata Endpoints -->
         <!-- The Metadata Exchange endpoint is used by the service to describe itself to clients. --> 
+        <!-- This endpoint does not use a secure binding and should be secured or removed before deployment -->
+        <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange"/>
+      </service>
+      <service name="Server.Login.LoginServerService">
+        <host>
+          <baseAddresses>
+            <add baseAddress = "http://localhost:8733/Design_Time_Addresses/Server.Login/ServerService/" />
+          </baseAddresses>
+        </host>
+        <!-- Service Endpoints -->
+        <!-- Unless fully qualified, address is relative to base address supplied above -->
+        <endpoint address="" binding="basicHttpBinding" contract="Server.Login.ILoginServerService">
+          <!-- 
+              Upon deployment, the following identity element should be removed or replaced to reflect the 
+              identity under which the deployed service runs.  If removed, WCF will infer an appropriate identity 
+              automatically.
+          -->
+          <identity>
+            <dns value="localhost"/>
+          </identity>
+        </endpoint>
+        <!-- Metadata Endpoints -->
+        <!-- The Metadata Exchange endpoint is used by the service to describe itself to clients. -->
         <!-- This endpoint does not use a secure binding and should be secured or removed before deployment -->
         <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange"/>
       </service>
