--- a/ApIGeneratorPrototype/ConsoleApplication2/API/API.csproj
+++ b/ApIGeneratorPrototype/ConsoleApplication2/API/API.csproj
@@ -40,6 +40,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ClassExtender.cs" />
+    <Compile Include="IExtendableClass.cs" />
     <Compile Include="XFoo.cs" />
     <Compile Include="ExtendContext.cs" />
     <Compile Include="ExtensionAttribute.cs" />
